Segundo commit del proyecto de sistema de punto de venta

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!--sistema de control de inventarios basado en la web, desarrollado para MOBO-->
-<!--Realizado por Miguel Isai Romero Rios e Ivan Kin Fernandez Lopez-->
+<!--Realizado por Miguel Isai Romero Rios-->
 <!--052022-->
 <!DOCTYPE html>
 
